Update 'dn5ybeeqr-python' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-8c415969a8.0lma.p3.openshiftapps.com/rhtap/rhtap-qe-python:a9878e7790adee852bc2322ea3cefd56259bcf41@sha256:17c0bc1153d1c06193274fcaa78b17cd6839360f7b33692a2958798046f9c9fc

--- a/components/dn5ybeeqr-python/overlays/development/deployment-patch.yaml
+++ b/components/dn5ybeeqr-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: dn5ybeeqr-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-8c415969a8.0lma.p3.openshiftapps.com/rhtap/rhtap-qe-python:a9878e7790adee852bc2322ea3cefd56259bcf41@sha256:17c0bc1153d1c06193274fcaa78b17cd6839360f7b33692a2958798046f9c9fc
+          name: container-image
